@@ -2178,8 +2178,7 @@ unbounded_again:
 				}
 
 				/* Word alignment */
-				if (c->flag_synchronized &&
-				    cb_verify_x (CB_TREE (c), cb_synchronized_clause, "SYNC")) {
+				if (c->flag_synchronized) {
 					align_size = 1;
 					switch (c->usage) {
 					case CB_USAGE_BINARY:
